fix navbar layout bug in View3D

--- a/app/components/view-3d/view-3d.scss
+++ b/app/components/view-3d/view-3d.scss
@@ -2,6 +2,9 @@
  * @author Thomas Kleinke
  */
 #view-3d {
+  position: relative;
+  z-index: 1001;
+
   .canvas-container {
     height: calc(100vh - 51px);
     max-width: calc(100vw - 300px);
